--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "@popperjs/core": "^2.11.5",
     "angular-datatables": "^13.0.1",
+    "bootstrap": "^5.1.3",
     "datatables.net": "^1.11.5",
     "datatables.net-dt": "^1.11.5",
     "jquery": "^3.6.0",
